# sonarlint-code-check-report

./: .env  .gitignore  MIGRATION_SETUP.md  Makefile  README.md  TEST_MOCK_DATA.md  docker-compose.yml  generate.bash  sonar_report_to_pdf.py
api/: .env  ADMIN_TOKEN_FEATURE.md  API_CHANGES.md  Cargo.toml  DATABASE_INTEGRATION.md  DOCUMENTATION.md  DOCUMENTATION_UPDATES.md  FIX_NOTES.md  README.md  SONARQUBE_SERVICE.md  SYSTEM_DESIGN.md  examples.sh  migrate.bat  migrate.sh
api/examples/: create_project_example.sh  test_api.ps1  test_api.sh  token_examples.sh
api/migration/: Cargo.toml
api/migration/src/: lib.rs  main.rs
api/migration/src/m20241201_000001_create_tables/: mod.rs
api/migration/src/m20241201_000002_add_project_folder_path/: mod.rs
api/migrations/20241201000001_create_projects/: down.sql  up.sql
api/migrations/20241201000002_create_admin_tokens/: down.sql  up.sql
api/migrations/20241201000002_create_sonarqube_tokens/: down.sql  up.sql
api/migrations/20241201000003_add_token_type/: down.sql  up.sql
api/src/: main.rs
api/src/config/: logger.rs
api/src/database/: admin_token_entity.rs  config.rs  connection.rs  entities.rs  handlers.rs  mod.rs  service.rs  token_entity.rs  token_service.rs
api/src/database/entities_generated.rs/: active_rule_parameters.rs  active_rules.rs  alm_pats.rs  alm_settings.rs  analysis_properties.rs  anticipated_transitions.rs  api_projects.rs  app_branch_project_branch.rs  app_projects.rs  architecture_graphs.rs  audits.rs  ce_activity.rs  ce_queue.rs  ce_scanner_context.rs  ce_task_input.rs  (+98 more)
api/src/sonarqube/: client.rs  handlers.rs  mod.rs  models.rs  service.rs
api/src/utils/: client.rs
api/src/web/: server.rs
(+27 files in other folders)
