[package]
name = "sonar-cute-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
serde = { version = "1.0.228", features = ["derive"] }

anyhow = "1.0.100"

dotenvy = "0.15.7"
listenfd = "1.0.2"

reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
base64 = "0.22.1"

actix-cors = "0.7.1"


# Database dependencies
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
