[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = "2.0.0-rc.13"
sea-orm = { version = "2.0.0-rc.13", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
